service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  selector:
    app: backend
  ports:
  - name: multitool
    port: 80
    targetPort: 2080
