service-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  selector:
    app: cache
  ports:
  - name: multitool
    port: 80
    targetPort: 3080
