service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  selector:
    app: frontend
  ports:
  - name: multitool
    port: 80
    targetPort: 1080
